# roadstop-scraper

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.kiro/specs/01-project-scaffolding/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/02-common-infra/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/03-geojson-schema/: design.md  requirements.md  research.md  spec.json  (+1 more)
.kiro/steering/: mcp-tools.md  product.md  structure.md  tech.md
.serena/: project.yml
geo-json/: 01_hokkaido_michinoeki.geojson  22_shizuoka_sapa.geojson  index.json
tests/: test_project_scaffolding.py
tests/common/: test_foundation.py  test_index_store.py  test_index_store_integration.py  test_logging_setup.py  test_logging_setup_integration.py  test_rate_limiter.py  test_resume_store.py
tests/geojson/: test_integration.py  test_models.py  test_naming.py  test_prefectures.py  test_reader.py  test_validation.py  test_writer.py
tests/michinoeki/: test_cli.py  test_detail.py  test_listing.py  test_merge.py  test_package_scaffolding.py  test_runner.py  test_scope.py  test_site_urls.py
tests/pipeline/: test_merge.py  test_scope.py
tests/sapa/: test_address.py  test_cli.py  test_collector.py  test_geocoding.py  test_integration_deletion.py  test_integration_resume.py  test_package.py  test_runner.py
tests/scraping/: test_config.py  test_errors.py  test_extract.py  test_fetcher.py  test_integration_fetch_to_extract.py  test_integration_rate_limit_retry.py  test_integration_resume_fetch.py  test_parser.py  test_resume.py
(+60 files in other folders)
